--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@google/genai": "latest",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "@google/genai": "latest"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
     "gh-pages": "^6.1.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
